--- a/TWDataAcquisitor/App.config
+++ b/TWDataAcquisitor/App.config
@@ -5,7 +5,7 @@
     </startup>
 	<appSettings>
 		<add key="ChartDataFilePath" value=""/>
-		<add key="ChartDataDir" value="Desktop" />
+		<add key="ChartDataDir" value="C:\Users\v.miraqae_web.PMI\source\repos\TradingViewCandlesData" />
 		<add key="SmaplingDelayInMilliseconds" value="50" />
 		<add key="SamplesPerRally" value="30" />
 	</appSettings>
